--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
   "dependencies": {
     "@tresjs/core": "^3.5.0",
     "three": "^0.158.0",
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue-zustand": "^0.6.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^8.0.0",
