--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "vite": "^4.5.0",
     "vite-plugin-banner": "^0.7.1",
     "vite-plugin-dts": "^3.6.3",
+    "vite-plugin-mkcert": "^1.17.1",
     "vitepress": "1.0.0-rc.25",
     "vue-tsc": "^1.8.22"
   }
