--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "@tresjs/core": "^3.5.0",
+    "pinia": "^2.1.7",
     "three": "^0.158.0",
     "vue": "^3.3.8",
     "vue-zustand": "^0.6.0",
