--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.15.8",
+  "packageManager": "pnpm@9.1.4",
   "license": "MIT",
   "keywords": [
     "vue",
@@ -46,7 +46,8 @@
     "playground": "cd playground && pnpm dev",
     "build": "vite build",
     "release": "release-it",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -57,33 +58,30 @@
     "vue": ">=3.3.8"
   },
   "dependencies": {
-    "@tresjs/core": "^3.5.0",
-    "pinia": "^2.1.7",
-    "three": "^0.164.0",
-    "vue": "^3.3.8",
-    "vue-zustand": "^0.6.0",
-    "zustand": "^4.4.6"
+    "@tresjs/core": "^4.0.2",
+    "three": "^0.165.0",
+    "vue": "^3.4.30"
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "^8.0.0",
-    "@tresjs/eslint-config-vue": "^0.2.1",
-    "@types/node": "^20.9.0",
-    "@types/three": "^0.164.0",
-    "@vitejs/plugin-vue": "^5.0.0",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@tresjs/eslint-config": "^1.1.0",
+    "@types/node": "^20.14.9",
+    "@types/three": "^0.165.0",
+    "@vitejs/plugin-vue": "^5.0.5",
     "dts": "^0.1.1",
-    "eslint": "^8.53.0",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint": "^9.5.0",
+    "eslint-plugin-vue": "^9.26.0",
     "kolorist": "^1.8.0",
-    "pathe": "^1.1.1",
-    "release-it": "^17.0.0",
+    "pathe": "^1.1.2",
+    "release-it": "^17.4.0",
     "rollup-plugin-analyzer": "^4.0.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.60.0",
-    "vite": "^5.0.0",
+    "typescript": "^5.5.2",
+    "unocss": "^0.61.0",
+    "vite": "^5.3.1",
     "vite-plugin-banner": "^0.7.1",
-    "vite-plugin-dts": "^3.6.3",
-    "vite-plugin-mkcert": "^1.17.1",
-    "vitepress": "1.2.2",
-    "vue-tsc": "^1.8.22"
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-mkcert": "^1.17.5",
+    "vitepress": "1.2.3",
+    "vue-tsc": "^2.0.22"
   }
 }
